Edit pass C2 activities

--- a/src/content/docs/book/part-1-instructions/1-sequence/4-activities/1-group-activity.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/4-activities/1-group-activity.mdx
@@ -14,33 +14,34 @@ For this activity, try to join into a group of 3-4 people. The idea here is to c
 
 Things to consider before the activity:
 
-- Have you gone through the concepts yourself, and build a few programs using these?
+- Have you gone through the concepts and built a few programs yourself?
 - Can you identify the different aspects of the syntax?
-- Are you familiar with how to discover things you can use from the SplashKit to create graphical programs?
+- Are you familiar with how to discover things you can use from SplashKit to create graphical programs?
 
-To really maximise this opportunity, have a look at setting up [Live Share](https://learn.microsoft.com/en-us/visualstudio/liveshare/use/share-project-join-session-visual-studio-code) before the session.
+To really maximise this opportunity, have a look at setting up [Live Share](https://learn.microsoft.com/en-us/visualstudio/liveshare/use/share-project-join-session-visual-studio-code) in Visual Studio Code before the session.
 
 ## Group Activity
 
-For this activity, we want you to create a program that shows a short, flip book style, animation. You will need to use sounds, images, and delays providing some level of animation. Bonus points if you can incorporate text with custom fonts. Give yourselves a timeframe, and see what you can get done!
+For this activity, we want you to create a program that shows a short, flip book style animation using sounds, images, and delays. Bonus kudos if you can incorporate text with custom fonts. Give yourselves a timeframe, and see what you can get done!
 
 <Steps>
-1. Work together to decide on the script - dont spend too long on this, and keep it to only a few scenes.
-1. Gather around one of your group members' computers and get started creating a program with an empty main.
+1. Work together to decide on what your animation will be -- dont spend too long on this, and keep it to only a few scenes.
+2. Gather around one of your group members' computers and get started creating a program with an empty `main`.
     :::danger
-    If you are using live share, make sure that you start with an empty folder so that others do not tamper, copy, or delete other code files you are working on. You want to limit what people have access to.
+    If you are using live share in VS Code, make sure that you start with an empty folder so that others do not tamper, copy, or delete other code files you are working on. You want to limit what people have access to.
     :::
 
-1. Run this shell command in the Terminal to set up the resource folders: `skm resources`
-1. Test out compiling and running. This way you will have these commands in the Terminal ready to go.
-1. If you are planning on using [Live Share](https://learn.microsoft.com/en-us/visualstudio/liveshare/use/share-project-join-session-visual-studio-code), get other team members to connect now.
-1. Start by adding in comments to outline the steps you want to perform... then
-1. Review the procedures you can use from the [reference](/book/part-1-instructions/1-sequence/5-reference/31-signatures) section, or the [SplashKit](https://splashkit.io) website.
-1. Work collaboratively to locate and download resources: images, sounds, and fonts.
-1. As you copy these in, add the instructions to load and draw/play these to check they work.
-1. Collaboratively build the scene, and see what you can create using only procedure calls.
-1. ##### Discuss the following with each other:
-   1. _How_ is sequence demonstrated in this program?
+3. Run this shell command in the terminal to set up the resource folders: `skm resources`
+4. Test out compiling and running. This way you will have these commands in the terminal ready to go.
+5. If you are planning on using [Live Share](https://learn.microsoft.com/en-us/visualstudio/liveshare/use/share-project-join-session-visual-studio-code), get other team members to connect now.
+6. Start by adding in comments to outline the steps you want your program to perform.
+7. Review the procedures you can use from the [reference](/book/part-1-instructions/1-sequence/5-reference/33-graphics/) section, or the [SplashKit](https://splashkit.io) website.
+8. Work collaboratively to locate and download resources: images, sounds, and fonts.
+9. As you copy these in, add the instructions to load and draw/play these to check they work.
+10. Collaboratively build the scene, and see what you can create using only procedure calls.
+11. ##### Discuss the following with each other:
+</Steps>
+   1. _How_ is sequence demonstrated in your program?
    2. _Where_ are there examples of the following syntax elements in your code:
       - Statements
       - Expressions
@@ -51,4 +52,3 @@ For this activity, we want you to create a program that shows a short, flip book
    3. _What_ are some example procedure signatures?
    4. _How_ did the signature help you know how to use the procedure?
    5. _How_ transferrable do you think these skills are? For example, how would this apply to other C/C++ libraries, and to libraries in other languages?
-</Steps>
