--- a/src/content/docs/book/part-1-instructions/1-sequence/4-activities/3-drawing.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/4-activities/3-drawing.mdx
@@ -8,17 +8,17 @@ import NoCopy from '/src/components/NoCopy.astro'
 <NoCopy>
 For this task you can build on the ideas from the [house drawing](/book/part-1-instructions/1-sequence/3-guided-tour/01-00-house-drawing) tour. You may also find it useful to read about [drawing in SplashKit](/book/part-1-instructions/1-sequence/5-reference/33-graphics/#drawing-to-a-window) and [playing sound effects in SplashKit](/book/part-1-instructions/1-sequence/5-reference/34-audio/) for this task.
 
-Create a program that draws a custom picture using shapes and colors from SplashKit - while sticking with just a single sequence.
+Create a program that draws a custom picture using shapes and colours from SplashKit.
 
 - Make sure to draw at least 3 shapes
-- Use a number of different colors
+- Use a number of different colours
 - Optionally, include images and/or text
 
-Make it a simple image like a car or flower shape. Focus on sequence - use this to appropriately layer the shapes in your composition.
+Keep your image simple, like a car or a flower. Focus on using sequence to appropriately layer the shapes in your composition.
 
 Make sure that you can identify and explain:
 
-- Procedure calls in your code
+- Procedure calls
 - Arguments
 - Expressions
 - Literals
@@ -26,7 +26,5 @@ Make sure that you can identify and explain:
 </NoCopy>
 
 :::caution
-
 Don't spend too long on this, but with a little time you should be able to draw something interesting or show a few images and maybe play a few sound effects.
-
 :::
